@@ -64,6 +64,24 @@
   \code{main}) being passed via \code{quickText} to handle
   routine formatting.}
 }
+\value{
+  As well as generating the plot itself, \code{corPlot}
+  also returns an object of class \dQuote{openair}. The
+  object includes three main components: \code{call}, the
+  command used to generate the plot; \code{data}, the data
+  frame of summarised information used to make the plot;
+  and \code{plot}, the plot itself. If retained, e.g. using
+  \code{output <- corPlot(mydata)}, this output can be used
+  to recover the data, reproduce or rework the original
+  plot or undertake further analysis. Note the denogram
+  when \code{cluster = TRUE} can aslo be returned and
+  plotted. See examples.
+
+  An openair output can be manipulated using a number of
+  generic operations, including \code{print}, \code{plot}
+  and \code{summary}. See \code{\link{openair.generics}}
+  for further details.
+}
 \description{
   Function to to draw and visualise correlation matrices
   using lattice. The primary purpose is as a tool for
@@ -104,6 +122,9 @@ data(mydata)
 corPlot(mydata)
 ## plot by season ... and so on
 corPlot(mydata, type = "season")
+## recover dendogram when cluster = TRUE and plot it
+res <-corPlot(mydata)
+plot(res$clust)
 \dontrun{
 ## a more interesting are hydrocarbon measurements
 hc <- importAURN(site = "my1", year = 2005, hc = TRUE)
