@@ -46,6 +46,7 @@ Changes in openair 0.8-0 [2012-11-30]
 *	Output clusters as C1, C2 etc. not 1, 2.
 *	Use same labelling in calendarPlot as other functions (wrong
 	month order in non-English locales)
+*	Export dendogram in corPlot - see example in help file
 
 Changes in openair 0.7-0 [2012-05-30]
 =====================================
